crates/falcon_dart_parser/tests/snapshots/parser_tests__snap_typedef_function.snap
---
source: crates/falcon_dart_parser/tests/parser_tests.rs
expression: "prog.declarations[0]"
---
TypeAlias(
    TypeAliasDecl {
        annotations: [],
        name: Identifier {
            name: "Callback",
            span: Span {
                start: 8,
                end: 16,
            },
        },
        type_params: [],
        aliased: Function(
            FunctionType {
                return_type: Some(
                    Void {
                        span: Span {
                            start: 19,
                            end: 24,
                        },
                    },
                ),
                type_params: [],
                params: [
                    FunctionTypeParam {
                        name: None,
                        param_type: Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "int",
                                        span: Span {
                                            start: 33,
                                            end: 36,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 33,
                                    end: 36,
                                },
                            },
                        ),
                        is_required: false,
                        is_named: false,
                    },
                ],
                is_nullable: false,
                span: Span {
                    start: 19,
                    end: 37,
                },
            },
        ),
        span: Span {
            start: 0,
            end: 38,
        },
    },
)
